--- a/2023.html
+++ b/2023.html
@@ -31,7 +31,7 @@
     </section>
     <div class="koloner">
         <section class="koloneet">
-                <video controls="" autoplay="loop" name="media"><source src="https://cloudinary.fritzhansen.com/-/media/Images/Videos-and-GIFs/Product-films/Egg.mp4" type="video/webm">
+                <video controls autoplay="loop" name="media"><source src="https://cloudinary.fritzhansen.com/-/media/Images/Videos-and-GIFs/Product-films/Egg.mp4" type="video/webm">
                     <source src="https://cloudinary.fritzhansen.com/-/media/Images/Videos-and-GIFs/Product-films/Egg.mp4" type="video/webm">
                 </video>
         </section>
@@ -68,6 +68,49 @@
                 <h6>AF MATILDE MARIBO 18/03/2023</h6>
             </div></a>
         </section>
+    </div>
 </main>
+<footer>
+    <div id="Join">
+        <h5>Join A(A)RTI</h5>
+        <h6> Tilmeld dig vores nyhedsbrev og bliv<br>
+            informeret og opdateret på <br> de nyeste trends</h6>
+        <p id="nyhedsbrev">TILDMED DIG NYHEDSBREVET</p>
+            Indsæt E-mail:<input id="e-mail" type="text" name="email">
+        <p id="bund">DANSK</p>
+        <a href="index.html">&#169; A(A)RTI</a>
+        <p id="bundto">Drevet af Shopify</p>
+
+
+    </div>
+    <div id="arkiver">
+        <h5>Bliv en del af A(A)RTIs arkiver</h5>
+        <h6>Vil du være en del af A(A)RTIs arkiver og historier. Kontakt os<br>
+            på mail eller andre kommunikations platforme. Vi søger altid <br>
+            nye input fra den danske befolkning. Det er jer der er<br>
+            med til at skabe vores platform. </h6>
+        <div class="trekoloner">
+            <div>
+                <img class="ikoner" src="face.jpg" alt="facebook">
+            </div>
+            <div>
+                <img class="ikoner" src="insta.jpg" alt="instagram">
+            </div>
+            <div>
+                <img class="ikoner" src="tiktok.jpg" alt="tiktok">
+            </div>
+        </div>
+        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2221.9051741135495!2d10.204563413440814!3d56.15874413605269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464c3f9436530841%3A0x18e19b2c2129ef87!2sAart%20De%20Vos%20Kunstnerartikler!5e0!3m2!1sda!2sdk!4v1679046352227!5m2!1sda!2sdk" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div class="links">
+        <section class="kolonetre">
+            <h5>Nyttige Links</h5>
+            <a href="Inspiration.html">Inspiration</a>
+            <a href="tyvendeaarhundred.html">Det. 20 århundred</a>
+            <a href="enogtyvendeaarhundred.html">Det. 21 århundred</a>
+            <a href="omos.html">Om os</a>
+        </section>
+    </div> 
+</footer>
 </body>
 </html>
