--- a/Inspiration.html
+++ b/Inspiration.html
@@ -35,7 +35,9 @@
         <section class="aarti">
             <h1 class="aarstal">2023</h1>
             <hr class="stregeret">
-            <div class="pladsholderet"></div>
+            <div class="pladsholder">
+                <img src="2023.jpg" alt="2023">
+            </div>
             <h1 class="aarstal">2010</h1>
             <hr class="stregeret">
             <div class="pladsholderet"></div>
