--- a/besøg.html
+++ b/besøg.html
@@ -26,9 +26,9 @@
     </header>
     <main>
         <div class="billedtop">
-            <img id="mellem" src="mellem.jpg">
-            <img id="store" src="store.jpg">
-            <img id="mellemstore" src="mellemstore.jpg">
+            <img id="mellem" src="mellem.jpg" alt="billede">
+            <img id="store" src="store.jpg" alt="billede">
+            <img id="mellemstore" src="mellemstore.jpg" alt="billede">
         </div>
         <article class="artikel">
             <h2>Besøg studerende</h2>
@@ -53,14 +53,14 @@
             </p>
             <p class="artikeltekst">
                 Der er en tendes til, at man personliggøre sin bolig og dermed dyrker familie traditioner eller genskaber minder fra et særligt øjeblik i indretningen.
-                En måde at gøre det på er at lave <a href="diy.html" span> DIY-projekter</span></a>, hvor man kan opgradere møbler og andet interiør. Klik på linket for at læse mere.
+                En måde at gøre det på er at lave <a href="diy.html"><span> DIY-projekter</span></a>, hvor man kan opgradere møbler og andet interiør. Klik på linket for at læse mere.
             </p>
             <section class="kortbilleder">
                 <div class="layout2023">
                     <img class="artikelbilleder" src="kortto.jpg" alt="billed">
                 </div>
                 <div class="layout2023">
-                    <video class="video" controls="" autoplay="loop" name="media"><source src="video.mov" type="video/webm">
+                    <video class="video" controls autoplay="loop" name="media"><source src="video.mov" type="video/webm">
                         <source src="video.mov" type="video/webm">
                     </video>
                 </div>
