--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="tokoloner">
             <a href="besøgto.html"><section class="førstekolone">
                 <div>
-                    <img src="forsidehjemme.jpg">
+                    <img src="forsidehjemme.jpg" alt="forside">
                 </div>
             </section></a>
             <section class="andenkolone">
@@ -71,32 +71,31 @@
         <div class="historieret">
             <section class="kort">
                 <a href="besøg.html"><div class="layout">
-                    <img class="historiebilleder" src="forside.jpg" alt="billed">
-                    <h2>Besøg</h2>
-                    <h4>I denne uge besøger vi en masse unge <br> studerende for at se et reelt <br> indblik af en studiebolig</h4>
+                    <img class="historiebilleder" src="kort.jpg" alt="billed">
+                    <h2>Byggeri</h2>
+                    <h4>Renovering af drømme sommerhus. <br> Gør drømmen til virkelighed, <br> og kom en renovering i forkøbet</h4>
                     <h5>AF MATILDE MARIBO 16/03/2023</h5>
                 </div></a>
                 <a href="ændring.html"><div class="layout">
-                    <img class="historiebilleder" src="forside1.jpg" alt="billed">
-                    <h2>Ændring</h2>
-                    <h4>Undgå parterapi med din bolig. <br>Oplever din bolig og dig et bedre ægteskab? I er ikke de eneste</h4>
+                    <img class="historiebilleder" src="kortsommer.jpg" alt="billed">
+                    <h2>Relax</h2>
+                    <h4>Undgå stress og jag <br> med en lækkert udeområde. Om det er i sit sommerhus eller hus</h4>
                     <h5>AF MATILDE MARIBO 17/03/2023</h5>
                 </div></a>
                 <a href="skandale.html"><div class="layout">
-                    <img class="historiebilleder" src="forside3.jpg" alt="billed">
-                    <h2>Skandale</h2>
-                    <h4>Har begivenheder som <br> corona og krigen i Ukraine <br> givet stof til eftertanke?</h4>
+                    <img class="historiebilleder" src="kortjegum.jpg" alt="billed">
+                    <h2>Jegum</h2>
+                    <h4>Køb sommerhus i Jegum Ferieland. <br> Der er legeplads og fællesarrangementer <br> sommerhusejerne igennem</h4>
                     <h5>AF MATILDE MARIBO 17/03/2023</h5>
                 </div></a>
                 <a href="diy.html"><div class="layout">
-                    <img class="historiebilleder" src="forside2.jpg" alt="billed">
-                    <h2>DIY</h2>
-                    <h4>Hop med på bølgen <br> hårfarve – og øjenbryn, der <br> matcher</h4>
+                    <img class="historiebilleder" src="kortpool.jpg" alt="billed">
+                    <h2>Pool</h2>
+                    <h4>Hop med på bølgen <br> og få etableret en pool i baghaven. <br> Det er både en partystarter <br> og nice mulighed for vinterbadning</h4>
                     <h5>AF MATILDE MARIBO 18/03/2023</h5>
                 </div></a>
             </section>
         </div>
-        </section>
     </main>
     <footer>
         <div id="Join">
