--- a/tyvendeaarhundred.html
+++ b/tyvendeaarhundred.html
@@ -33,7 +33,7 @@
             <hr>
         </section>
         <div class="knapperoveraar">
-            <a href="#"><button class="aar">1961 &#8594;</button></a>
+            <button class="aar">1961 &#8594;</button>
             <button class="aar">1965 &#8594;</button>
             <button class="aar">1970 &#8594;</button>
             <button class="aar">1975 &#8594;</button>
@@ -71,6 +71,7 @@
                     <h5>AF MATILDE MARIBO 18/03/2023</h5>
                 </div>
             </section>
+        </section>
     </main>
     <footer>
         <div id="Join">
